[tool.poetry]
name = "data-simulator"
version = "1.6.0"
description = "Gen3 Data Simulator"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/data-simulator"
packages = [
    { include = "./datasimulator" }
]

[tool.poetry.scripts]
data-simulator = 'datasimulator.main:main'

[tool.poetry.dependencies]
python = ">=3.9,<4"
cdislogging = "*"
gen3datamodel = "*"
gen3dictionary = "*"
rstr = ">=3,<4"
requests = "*"
dictionaryutils = "*"
psqlgraph = "*"

pyyaml = "<=5.1" # force version that doesn't cause "not supporting PEP 517 builds" error

[tool.poetry.dev-dependencies]
pytest = ">=7,<8"
mock = "*"
pytest-cov = "*"
coverage = "*"

[build-system]
requires = ["poetry>=1.1.15"]
build-backend = "poetry.masonry.api"
