[tool.poetry]
name = "data-simulator"
version = "1.6.3"
description = "Gen3 Data Simulator"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/data-simulator"
packages = [
    { include = "./datasimulator" }
]

[tool.poetry.scripts]
data-simulator = 'datasimulator.main:main'

[tool.poetry.dependencies]
python = ">=3.9,<4"
cdislogging = "*"
gen3datamodel = {git = "https://github.com/uc-cdis/gen3datamodel", branch = "chore/update-branches"}
gen3dictionary = "*"
pyyaml = "<7"
rstr = ">=3,<4"
requests = "*"
dictionaryutils = {git = "https://github.com/uc-cdis/dictionaryutils", rev = "3.4.11"}
psqlgraph = "*"

[tool.poetry.dev-dependencies]
pytest = ">=7,<8"
mock = "*"
pytest-cov = "*"
coverage = "*"

[build-system]
requires = ["poetry>=1.1.15"]
build-backend = "poetry.masonry.api"
